# Sistemas_Gestao_Projetos

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  local.env  manage.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
apps/core/: mail.py  pagination.py  permissions.py  validators.py
apps/projetos/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/projetos/migrations/: 0001_initial.py  0002_initial.py  0003_alter_tarefa_table_grupotarefa.py  0004_rename_prazo_tarefa_hora_grupotarefa_ativo_and_more.py  0004_rename_prazo_tarefa_hora_tarefa_data.py  0005_tarefa_ativo.py  0006_grupotarefa_ativo.py
apps/projetos/tests/: test_grupos.py  test_projetos.py  test_tarefas.py
apps/projetos/tests/factory/: projetos.py
apps/turmas/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/turmas/migrations/: 0001_initial.py  0002_initial.py
apps/turmas/tests/: test_disciplinas.py  test_turmas.py
apps/turmas/tests/factory/: turmas.py
apps/usuarios/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/usuarios/migrations/: 0001_initial.py
apps/usuarios/tests/: test_aluno.py  test_login.py  test_professor.py
apps/usuarios/tests/factory/: usuarios.py
sistema_gestao_projetos/: asgi.py  celery.py  celerybeat-schedule.py  settings.py  urls.py  wsgi.py
sistema_gestao_projetos/settings/: __init__.py  base.py  local.py  production.py
turmas/: admin.py
usuarios/: admin.py  models.py  views.py
