[tool.poetry]
name = "sistemas_gestao_projetos"
version = "0.1.0"
description = "Sistema para Gestao de Projetos de Engenharia de Software"
authors = ["Willames <williames@arbache.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"
djangorestframework = "^3.13.1"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
